2009-09-04  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (x_focus_changed): If we get a focusout and pointer
	is invisible, make it visible.

	* xterm.h: Remove condition for declaration of
	x_*_window_to_frame.

2009-09-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dispnew.c (Fsend_string_to_terminal): Make it work again on the
	initial terminal as well.

2009-09-02  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.h: Rename x_non_menubar_window_to_frame to
	x_menubar_window_to_frame.

	* xterm.c: Remove declarations also in xterm.h
	(XTmouse_position): Do not return valid positions
	for clicks in the menubar and the toolbar for Gtk+.

	* xfns.c (x_any_window_to_frame): Assume less about Gtk+ internals,
	if the widget for the event has the same top level as a frame,
	return the frame.
	(x_menubar_window_to_frame): Detect menu bar even with Gtk+
	internal windows, bug #4122.
	(x_non_menubar_window_to_frame): Remove.

2009-09-02  Glenn Morris  <rgm@gnu.org>

	* buffer.c (default-major-mode): Move most of the doc from here...
	(major-mode): ... to here.

2009-08-30  Nick Roberts  <nickrob@snap.net.nz>

	* process.c (wait_reading_process_output): Keep the descriptor
	when pty is used by a non-child process, e.g., in I/O buffer of
	GDB this allows inferior to be restarted.

2009-08-29  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (redisplay_internal): Remove redundant test and collapse
	both branches into one.

2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs.c (USAGE1): Remove --(no-)multibyte, --(no-)unibyte.
	(main): Use enable-multibyte-characters rather than
	default-enable-multibyte-characters.  Output a warning message when
	running a unibyte session.

2009-08-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* unexmacosx.c (print_load_command_name) [LC_DYLD_INFO]: Add cases
	LC_DYLD_INFO and LC_DYLD_INFO_ONLY.
	(copy_data_segment): Also copy __program_vars section.
	(copy_dyld_info) [LC_DYLD_INFO]: New function.