@@ -1,3 +1,9 @@
+2009-09-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* keymap.c (where_is_internal): Filter out shadowed remappings.
+	Assume that where_is_internal returns unshadowed bindings to simplify
+	the code and get rid of the gotos.  Use ASIZE.
+
 2009-09-04  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xterm.c (x_focus_changed): If we get a focusout and pointer
